# agendable-v3

./: .dockerignore  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  .semgrepignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS  codecov.yml  copilot-instructions.md
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  complexity.yml  dependency-scan.yml  deploy-gcp.yml  semgrep.yml
dev/keycloak/: realm-export.json
docs/: deploy-gcp.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_user_password_hash.py  0003_external_identities.py  0004_meeting_series_recurrence.py  0005_meeting_series_recurrence_timezone.py  0006_tasks_move_to_occurrence.py  0007_user_prefers_dark_mode.py  0008_occurrence_completed.py  0009_task_assignee_and_attendees.py  0010_user_profile_fields.py  0011_user_role.py  0012_task_due_at.py  0013_series_reminder_minutes_before.py  0014_user_is_active.py  0015_task_agenda_descriptions.py
src/agendable/: __init__.py  app.py  auth.py  cli.py  logging_config.py  models.py  rate_limit.py  recurrence.py  reminders.py  security_audit.py  settings.py  sso_google.py  sso_oidc_flow.py
tests/: conftest.py  test_auth_rate_limit_helpers.py  test_logging_config.py  test_recurrence.py  test_reminders.py  test_session_security.py  test_web_smoke.py
tests/auth/: account_linking_test_helpers.py  admin_test_helpers.py  test_account_linking.py  test_account_linking_oidc_flow.py  test_account_linking_profile.py  test_admin_access.py  test_admin_access_basics.py  test_admin_user_management.py  test_logout.py  test_oidc_autoprovision.py  test_oidc_start.py  test_password_login.py  test_redirects.py
tests/repos/: test_meeting_series_repo.py  test_user_repo_crud.py
tests/web/: test_common_datetime_helpers.py  test_dashboard.py  test_series.py  test_task_due_dates.py  (+2 more)
(+77 files in other folders)
